--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
+language: ruby
+
+cache:
+- bundler
+- apt
+
 rvm:
 - 2.0.0
 - 2.1.3
@@ -6,4 +12,4 @@ rvm:
 before_script:
   - sudo add-apt-repository ppa:costamagnagianfranco/locutusofborg-ppa -y
   - sudo apt-get update -q
-  - sudo apt-get install libwxgtk3.0-dev
+  - sudo apt-get install libwxgtk3.0-dev libwxgtk-media3.0-dev
