--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,14 @@ cache:
 - apt
 
 rvm:
-- 2.0.0
-- 2.1.3
+- 2.1.3-clang
+- 2.1.0
+- ruby-head-clang
 - ruby-head
 
-before_script:
-  - sudo add-apt-repository ppa:costamagnagianfranco/locutusofborg-ppa -y
-  - sudo apt-get update -q
-  - sudo apt-get install libwxgtk3.0-dev libwxgtk-media3.0-dev
+before_install:
+- '[[ "$TRAVIS_RUBY_VERSION" == *-clang ]] && export CC=clang'
+- "sudo apt-key adv --fetch-keys http://repos.codelite.org/CodeLite.asc"
+- "sudo add-apt-repository 'deb http://repos.codelite.org/wx3.0.2/ubuntu/ trusty universe'"
+- "sudo apt-get update"
+- "sudo apt-get install -y libwxbase3.0-0-unofficial libwxbase3.0-dev libwxgtk3.0-0-unofficial libwxgtk3.0-dev wx3.0-headers wx-common"
