--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_install:
 - "sudo apt-key adv --fetch-keys http://repos.codelite.org/CodeLite.asc"
 - "sudo add-apt-repository 'deb http://repos.codelite.org/wx3.0/ubuntu/ precise universe'"
 - "sudo apt-get update"
-- "sudo apt-get install -y  apt-get install libwxbase3.0-dev libwxgtk3.0-dev"
+- "sudo apt-get install -y libwxbase3.0-dev libwxgtk3.0-dev"
