--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ cache:
 - apt
 
 rvm:
-- 2.0.0-clang
-- 2.0.0
+- 2.1.1-clang
+- 2.1.1
 - 2.1.3-clang
 - 2.1.3
 - ruby-head-clang
@@ -18,7 +18,7 @@ before_script:
 - sleep 3
 
 before_install:
-- 'if [ "$TRAVIS_RUBY_VERSION" =~ -clang ]; then export CC=clang; fi'
+- 'if [[ "$TRAVIS_RUBY_VERSION" =~ -clang ]]; then export CC=clang; fi'
 - "sudo apt-key adv --fetch-keys http://repos.codelite.org/CodeLite.asc"
 - "sudo add-apt-repository 'deb http://repos.codelite.org/wx3.0/ubuntu/ precise universe'"
 - "sudo apt-get update"
