--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ cache:
 - apt
 
 rvm:
-- rbx-2.2.7
-- rbx-head
+#- rbx-2.2.7
 #- 2.1.1-clang
 - 2.1.1
 #- 2.1.3-clang
@@ -20,7 +19,7 @@ before_script:
 - sleep 3
 
 before_install:
-- 'if [[ "$TRAVIS_RUBY_VERSION" =~ -clang ]]; then export CC=clang; fi'
+#- 'if [[ "$TRAVIS_RUBY_VERSION" =~ -clang ]]; then export CC=clang; fi'
 - "sudo apt-key adv --fetch-keys http://repos.codelite.org/CodeLite.asc"
 - "sudo add-apt-repository 'deb http://repos.codelite.org/wx3.0/ubuntu/ precise universe'"
 - "sudo apt-get update"
