--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,15 @@ cache:
 
 rvm:
 - rbx-2.2.7
+- rbx-head
 #- 2.1.1-clang
+- 2.1.0
 - 2.1.1
 #- 2.1.3-clang
-- 2.1.3
+- 2.1.5
 #- ruby-head-clang
-- ruby-head
+- 2.2.0-preview2
+#- ruby-head
 
 before_script:
 - "export DISPLAY=:99.0"
