--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ cache:
 
 rvm:
 - rbx-2.2.7
-- rbx-head
+#rbx does not have a head
+#- rbx-head
 #- 2.1.1-clang
 - 2.1.0
 - 2.1.1
@@ -14,6 +15,7 @@ rvm:
 - 2.1.5
 #- ruby-head-clang
 - 2.2.0-preview2
+#currently broken because of data_type parent
 #- ruby-head
 
 before_script:
