--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ rvm:
 #- 2.1.3-clang
 - 2.1.5
 #- ruby-head-clang
-- 2.2.0-preview2
+- 2.2.0
 #currently broken because of data_type parent
-#- ruby-head
+- ruby-head
 
 before_script:
 - "export DISPLAY=:99.0"
