--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ cache:
 - bundler
 - apt
 
+os:
+- linux
+- osx
+
 rvm:
 #rbx doesnt work anymore with rwx
 #- rbx-2.2.7
@@ -11,11 +15,11 @@ rvm:
 #- rbx-head
 #- 2.1.1-clang
 - 2.1.0
-- 2.1.1
 #- 2.1.3-clang
-- 2.1.5
+- 2.1.6
 #- ruby-head-clang
 - 2.2.0
+- 2.2.2
 #currently broken because of data_type parent
 - ruby-head
 
@@ -24,9 +28,12 @@ before_script:
 - "sh -e /etc/init.d/xvfb start"
 - sleep 3
 
+
 before_install:
-#- 'if [[ "$TRAVIS_RUBY_VERSION" =~ -clang ]]; then export CC=clang; fi'
-- "sudo apt-key adv --fetch-keys http://repos.codelite.org/CodeLite.asc"
-- "sudo add-apt-repository 'deb http://repos.codelite.org/wx3.0/ubuntu/ precise universe'"
-- "sudo apt-get update"
-- "sudo apt-get install -y libwxbase3.0-dev libwxgtk3.0-dev"
+  - "if [ ${TRAVIS_OS_NAME:-'linux'} = 'linux' ]; then . ./ci/travis/before_install-linux.sh; fi"
+  - "if [ ${TRAVIS_OS_NAME:-'linux'} = 'osx' ]; then . ./ci/travis/before_install-osx.sh; fi"
+
+
+matrix:
+  allow_failures:
+    - os: osx
