--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,8 @@ rvm:
 - ruby-head
 
 before_script:
-- "export DISPLAY=:99.0"
-- "sh -e /etc/init.d/xvfb start"
-- sleep 3
+  - "if [ ${TRAVIS_OS_NAME:-'linux'} = 'linux' ]; then . ./ci/travis/before_script-linux.sh; fi"
+  - "if [ ${TRAVIS_OS_NAME:-'linux'} = 'osx' ]; then . ./ci/travis/before_script-osx.sh; fi"
 
 
 before_install:
